feat: Added JMH tests